--- a/.github/workflows/npd.yml
+++ b/.github/workflows/npd.yml
@@ -76,12 +76,12 @@ jobs:
           echo "Configuring AWS credentials..."
           aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
           aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-          aws configure set default.region us-west-2  # Change to your desired region
+          aws configure set default.region us-east-1  # Change to your desired region
 
       - name: Deploy to EKS
         run: |
           echo "Updating kubeconfig..."
-          aws eks --region us-west-2 update-kubeconfig --name <your-cluster-name>
+          aws eks --region us-east-1 update-kubeconfig --name cicdcluster
           echo "Applying Kubernetes deployment..."
           kubectl apply -f kubernetes-deployment.yml
           kubectl get pods
